"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-05-01	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-19-chpsim-04-29:
	  Woo hoo!  No more regressions left to process!
	  No source revision, only minor un-hack to scm/hackt/chpsim-trace.scm,
		see scm/ChangeLog.
	  Last remaining regression test cases updated.  
	  Now we can make some forward progress once again.  


	* HACKT-00-01-04-main-00-81-19-chpsim-04-28:
	  Object/nonmeta_variable.h: has_trace_value() for channels, 
		is true when channel has just received or sent.
		This allows trace reader to see <value>/'ack in
		strict alternation regardless of whether send or receive
		was more critical.  The latter of the atomic pair will
		always reset channel back to inactive.  
	  guile/chpsim-wrap.cc: tracing channel values now calls
		has_trace_value (new) to extract channel state.  
	  This batch of updated test cases uses this.  


	* HACKT-00-01-04-main-00-81-19-chpsim-04-27:
	  No source revision.
	  Updated marge batch of chpsim-guile test cases, mostly trivial
		differences arising from changes in execution trace due to
		tight channel synchronization.
	  Issues to resolve: channel-states and trace values (used to be 'ack),
		and branch selection execution counts (no longer need extra
		work to back-track because branches are executed normally now)
	  After those are resolved, add the long-promised slack demonstration
		test cases.  


2007-04-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-19-chpsim-04-26:
	  FIXED remaining regressions on channel probes!
	  sim/chpsim/EventExecutor.cc: EventRechecker(channel_send) now
		adds the referenced channel to the list of updates to 
		propagate.  This is the only self-modify-checking
		corner case, needed to support probes.  