@@ -1,0 +1,16 @@
+Variables: 
+bool[1]: "x" 
+bool[2]: "y" 
+chan[1]: "X" 
+
+Event graph: 
+event[0]: fork: null, pid: 0, #pred: 0, succ: 5 
+event[1]: null: , pid: 0, #pred: 3, succ: 
+event[2]: receive: X?(x), pid: 0, #pred: 1, succ: 2 
+channel deps: 1 
+event[3]: receive: X?(y), pid: 0, #pred: 1, succ: 3 
+channel deps: 1 
+event[4]: send: [after=20] X!(true), pid: 0, #pred: 1, succ: 4 
+channel deps: 1 
+event[5]: fork: , pid: 0, #pred: 1, succ: 2 3 4 
+
