@@ -1,0 +1,78 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	28
+	3	##ADDR##	chanplch	0	#HEAD#	#TAIL#	25
+	4	##ADDR##	dboolplh	0	#HEAD#	#TAIL#	25
+	5	##ADDR##	chaninst	0	#HEAD#	#TAIL#	20
+	6	##ADDR##	bchntprf	0	#HEAD#	#TAIL#	25
+	7	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	8	##ADDR##	datadefn	0	#HEAD#	#TAIL#	69
+	9	##ADDR##	datainst	0	#HEAD#	#TAIL#	24
+	10	##ADDR##	datatprf	0	#HEAD#	#TAIL#	20
+	11	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	12	##ADDR##	CHPsend_	0	#HEAD#	#TAIL#	24
+	13	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	14	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	15	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	16	##ADDR##	CHPsend_	0	#HEAD#	#TAIL#	24
+	17	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	18	##ADDR##	cnstpb__	0	#HEAD#	#TAIL#	9
+	19	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	20	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	24
+	21	##ADDR##	cnvtpipr	0	#HEAD#	#TAIL#	12
+	22	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	23	##ADDR##	schnnref	0	#HEAD#	#TAIL#	16
+	24	##ADDR##	sdbnref_	0	#HEAD#	#TAIL#	16
+	25	##ADDR##	footprnt	0	#HEAD#	#TAIL#	301
+	26	##ADDR##	fndchntp	0	#HEAD#	#TAIL#	20
+	27	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	12
+	28	##ADDR##	CHPloop_	0	#HEAD#	#TAIL#	16
+	29	##ADDR##	CHPrecv_	0	#HEAD#	#TAIL#	24
+	30	##ADDR##	cnstpr__	0	#HEAD#	#TAIL#	12
+
+In module created from: ##FILE## (unrolled) (created)
+In namespace "", we have: {
+  0 parameter-collections
+  2 instantiation-collections
+  0 sub-namespaces
+  0 definitions
+  0 typedefs
+  Instances:
+    X = chan(bool<>) X
+    x = bool<> x
+}
+
+top-level chp:
+  concurrent: {
+    *[
+      X!(true)
+    ]
+    *[
+      X!(false)
+    ]
+    *[
+      [after=preal(20)] X?(x)
+    ]
+  }
+footprint: {
+  X = channel chan(bool<>)^0 = X (1) 
+  x = bool^0 = x (1) 
+  Created state:
+  channel instance pool:
+  1	X
+  bool instance pool:
+  1	x
+  resolved concurrent actions:
+    *[
+      X!(true)
+    ]
+    *[
+      X!(false)
+    ]
+    *[
+      [after=20] X?(x)
+    ]
+}
