@@ -1,0 +1,15 @@
+Variables: 
+bool[1]: "x" 
+chan[1]: "X" 
+
+Event graph: 
+event[0]: fork: null, pid: 0, #pred: 0, succ: 5 
+event[1]: null: , pid: 0, #pred: 3, succ: 
+event[2]: send: X!(true), pid: 0, #pred: 1, succ: 2 
+channel deps: 1 
+event[3]: send: X!(false), pid: 0, #pred: 1, succ: 3 
+channel deps: 1 
+event[4]: receive: [after=20] X?(x), pid: 0, #pred: 1, succ: 4 
+channel deps: 1 
+event[5]: fork: , pid: 0, #pred: 1, succ: 2 3 4 
+
