@@ -1,5 +1,5 @@
 # "test/chpsim/testlib/Makefile.am"
-#	$Id: Makefile.am,v 1.6 2007/04/20 18:27:38 fang Exp $
+#	$Id: Makefile.am,v 1.6.2.1 2007/05/02 05:11:59 fang Exp $
 # Test auto-Makefile for chpsim.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -13,6 +13,8 @@ HACKT_PARSE_TEST_PASSES = \
 	bool-buf \
 	int-source int-sink \
 	int-table \
+	int-buf int-copy \
+	int-arith \
 	channel-sync channel-desync
 
 HACKT_CREATE_TEST_PASSES = \
