@@ -1,5 +1,14 @@
 "scm/ChangeLog"
 
+2007-05-02	David Fang	<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-81-19-chpsim-04-30:
+	  hackt/chpsim-trace.scm: 
+		added chpsim-state-trace-single-reference-values -- extracts
+			pair<event-trace-id, value> of a single variable, 
+			convienent for entire variable value-history.
+
+
 2007-05-01	David Fang	<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-81-19-chpsim-04-29:
